# jdwp-client

./: Cargo.toml
src/: client.rs  commands.rs  consts.rs  lib.rs  types.rs  utils.rs
tests/: virtual_machine.rs
tests/common/: mod.rs
